# devpod-opencode-dotfiles

./: .gitignore  .zprofile  .zshrc  CLAUDE.md  Dockerfile  LICENSE  README.md  devspace.yaml  install.sh  pyproject.toml
.config/: AGENTS.md
.config/agents/: general.md  junior-implementer.md  planner.md  senior-implementer.md
.config/opencode/: .gitignore  AGENTS.md  PULL_REQUEST_TEMPLATE.md  opencode.jsonc  package.json  provider-enablement.seed.json  provider-policy.jsonc
.config/shell/: workspace-navigation.zsh
.github/workflows/: publish_image.yml  subagent-session-resume-check.yml
.opencode/agents/: maestro.md  subagent-template.md
.opencode/opencode-loop/: ses_1bd68ebc2ffe36PKIRSIcLFNj8.json
k8s/devspace-bare-hub/: workspace-deployment.yaml  workspace-pvc.yaml
ops/: check-workspace.sh  destroy-workspace.sh
poc/github-app-phase0/: README.md  run_demo.py
scripts/: create-hub-repo.sh  devspace-destroy.sh  devspace-dev-preflight.sh  devspace-doctor.sh  install-validate-source.sh  provision-workspace.sh  resolve-git-identity.sh  setup-host-bare-hub.sh  verify-host-bare-hub.sh  workspace-provision.sh  workspace-repair.sh
scripts/lib/: bare-excludes.list  did-you-mean.sh  ensure-bare-excludes.sh  hub-repo-core-bootstrap.sh  hub-repo-core-source.sh  hub-repo-core-upstream.sh  hub-repo-core.sh  managed-lane-registry-common.sh  managed-lane-registry-mutations.sh  managed-lane-registry-path.sh  managed-lane-registry.sh  managed-repo-metadata.sh  managed-worktree-cleanup-mutation.sh  managed-worktree-cleanup-resolve.sh  (+15 more)
tests/: conftest.py
(+155 files in other folders)
